--- a/book-rating/src/app/dashboard/dashboard.component.html
+++ b/book-rating/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,6 @@
-{{ books }}
+<br-book [book]="books[0]"></br-book>
+
+<br-book [book]="books[1]"></br-book>
+
+<br-book [book]="books[2]"></br-book>
+
