hands on: ngFor

--- a/book-rating/src/app/dashboard/dashboard.component.html
+++ b/book-rating/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
-<br-book [book]="books[0]"></br-book>
+<div
+  *ngFor="let b of books; odd as o"
+  [ngClass]="{ grayBg: !o }">
 
-<br-book [book]="books[1]"></br-book>
-
-<br-book [book]="books[2]"></br-book>
-
+  <br-book [book]="b"></br-book>
+</div>
