--- a/book-rating/src/app/books/dashboard/dashboard.component.html
+++ b/book-rating/src/app/books/dashboard/dashboard.component.html
@@ -5,4 +5,4 @@
   <br-book [book]="b"></br-book>
 </div>
 
-<button class="btn btn-primary">Klick mich</button>
+Anzahl der Bücher: {{ books.length }}
