--- a/book-rating/src/app/books/book/book.component.html
+++ b/book-rating/src/app/books/book/book.component.html
@@ -13,6 +13,8 @@
     <p>{{ book.description }}</p>
 
     <button (click)="doRateDown()" class="btn btn-secondary mr-2">-1</button>
-    <button (click)="doRateUp()" class="btn btn-primary">+1</button>
+    <button (click)="doRateUp()" class="btn btn-primary mr-2">+1</button>
+
+    <a class="btn btn-primary" [routerLink]="['/book',  book.isbn]">Details</a>
   </div>
 </div>
