rxjs payground challange: 2-5

--- a/book-rating/src/app/books/book-details/book-details.component.html
+++ b/book-rating/src/app/books/book-details/book-details.component.html
@@ -2,4 +2,6 @@
 
 <p>book-details works!</p>
 
-<a routerLink="/book/9783864902079">Got to next Book</a>
+<a routerLink="/book/9783864902079">
+  Got to next Book
+</a>
