--- a/book-rating/src/app/books/book-details/book-details.component.html
+++ b/book-rating/src/app/books/book-details/book-details.component.html
@@ -1,6 +1,6 @@
-<h1>#{{ book?.title }}</h1>
+<h1>#{{ (book$ | async)?.title }}</h1>
 
-<p>{{ book?.description }}</p>
+<p>{{ (book$ | async)?.description }}</p>
 
 <a routerLink="/book/9783864902079">
   Got to next Book
