--- a/book-rating/src/styles.scss
+++ b/book-rating/src/styles.scss
@@ -4,3 +4,6 @@ $primary: #C3002F !default;
 $enable-rounded: false !default;
 
 @import '~@angular-schule/workshop-styles/index';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
