ng g @angular/material:nav nav

--- a/book-rating/src/styles.scss
+++ b/book-rating/src/styles.scss
@@ -7,3 +7,5 @@ $enable-rounded: false !default;
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+*, *::before, *::after { box-sizing: border-box; }
