--- a/book-rating/src/app/nav/nav.component.html
+++ b/book-rating/src/app/nav/nav.component.html
@@ -11,7 +11,7 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
+    <mat-toolbar color="primary" class="mat-elevation-z4">
       <button
         type="button"
         aria-label="Toggle sidenav"
@@ -20,8 +20,14 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>book-rating</span>
+
+      <!-- <span>book-rating</span> -->
+      <ng-content select="h1"></ng-content>
+
     </mat-toolbar>
+
     <!-- Add Content Here -->
+    <ng-content></ng-content>
+
   </mat-sidenav-content>
 </mat-sidenav-container>
